[metadata]
name = interceptor
version = 2014.2
summary = OpenStack Explorer
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[files]
packages =
    interceptor
scripts =
    bin/interceptor-engine
    bin/interceptor-api

[global]
setup-hooks =
    pbr.hooks.setup_hook

[compile_catalog]
directory = interceptor/locale
domain = interceptor

[update_catalog]
domain = interceptor
output_dir = interceptor/locale
input_file = interceptor/locale/interceptor.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = interceptor/locale/interceptor.pot

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
